k8s/aks-nodejs/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: aks-nodejs-service
spec:
  selector:
    app: aks-nodejs
  type: NodePort
  ports:
  - protocol: TCP
    port: 3000
